--- a/txt/editorTxt.html
+++ b/txt/editorTxt.html
@@ -1,5 +1,3 @@
-<!-- editorTxt.html -->
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -10,47 +8,7 @@
 </head>
 <body>
 
-  <!-- Cabeçalho fixo -->
-  <header id="header">
-    <div class="topo-header">
-      <!-- Link para voltar ao menu principal -->
-      <a href="../" class="btn-voltar" id="btnVoltar">Aristidesbp</a>
-
-      <!-- Barra de busca para buscar e substituir texto -->
-      <div class="busca-container" id="buscaContainer">
-        <input type="text" id="palavraBusca" placeholder="Buscar..." />
-        <input type="text" id="palavraSubstituir" placeholder="Substituir por..." />
-        <button id="btnBuscar">Buscar</button>
-        <button id="btnSubstituirTudo">Substituir tudo</button>
-        <span id="contador"></span>
-        <button id="btnAnterior">←</button>
-        <button id="btnProximo">→</button>
-      </div>
-
-      <!-- Select para navegar entre os arquivos -->
-      <select id="seletorArquivo">
-        <option value="documentacao.txt">documentacao.txt</option>
-        <option value="git-hub.txt">git-hub.txt</option>
-        <option value="linux-mint.txt">linux-mint.txt</option>
-        <option value="termux.txt">termux.txt</option>
-        <option value="python.txt">python.txt</option>
-        <option value="prompt-Engenharia.txt">prompt-Engenharia.txt</option>
-        <option value="trafego-pago.txt">trafego-pago.txt</option>
-      </select>
-    </div>
-  </header>
-
-  <!-- Espaço para o textarea do editor -->
-  <textarea id="editor"></textarea>
-
-  <!-- Controles para zoom e download -->
-  <div class="zoom-controls" id="zoomControls">
-    <button id="btnDiminuirFonte">−</button>
-    <button id="btnAumentarFonte">+</button>
-    <button id="btnBaixarArquivo">Download</button>
-  </div>
-
-  <!-- Estilos internos para facilitar visualização -->
+<!-- Estilos internos para facilitar visualização -->
   <style>
     /* Reset básico e box-sizing para todos os elementos */
     * {
@@ -185,11 +143,54 @@
     }
   </style>
 
+  <!-- Cabeçalho fixo -->
+  <header id="header">
+    <div class="topo-header">
+      <!-- Link para voltar ao menu principal -->
+      <a href="../" class="btn-voltar" id="btnVoltar">Aristidesbp</a>
+
+      <!-- Barra de busca para buscar e substituir texto -->
+      <div class="busca-container" id="buscaContainer">
+        <input type="text" id="palavraBusca" placeholder="Buscar..." />
+        <input type="text" id="palavraSubstituir" placeholder="Substituir por..." />
+        <button id="btnBuscar">Buscar</button>
+        <button id="btnSubstituirTudo">Substituir tudo</button>
+        <span id="contador"></span>
+        <button id="btnAnterior">←</button>
+        <button id="btnProximo">→</button>
+      </div>
+
+      <!-- Select para navegar entre os arquivos -->
+      <select id="seletorArquivo">
+        <option value="documentacao.txt">documentacao.txt</option>
+        <option value="git-hub.txt">git-hub.txt</option>
+        <option value="linux-mint.txt">linux-mint.txt</option>
+        <option value="termux.txt">termux.txt</option>
+        <option value="python.txt">python.txt</option>
+        <option value="prompt-Engenharia.txt">prompt-Engenharia.txt</option>
+        <option value="trafego-pago.txt">trafego-pago.txt</option>
+      </select>
+    </div>
+  </header>
+
+  <!-- Espaço para o textarea do editor -->
+  <textarea id="editor"></textarea>
+
+  <!-- Controles para zoom e download -->
+  <div class="zoom-controls" id="zoomControls">
+    <button id="btnDiminuirFonte">−</button>
+    <button id="btnAumentarFonte">+</button>
+    <button id="btnBaixarArquivo">Download</button>
+  </div>
+
+  
+
   <!-- Script JavaScript com POO e funções comentadas -->
   <script>
-    /**
-     * Classe EditorTxt para controlar o editor, buscas, fontes e arquivos
-     */
+    
+     /* RODE EN SERVIDOR LOCAL COM PYTHON: */
+     /* Classe EditorTxt para controlar o editor, buscas, fontes e arquivos*/
+     
     class EditorTxt {
       constructor() {
         // Elementos do DOM
