--- a/projetos/portfolio-aristidesbp/melhor página já criada2.html
+++ b/projetos/portfolio-aristidesbp/melhor página já criada2.html
@@ -3,217 +3,188 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfólio Aristidesbp</title>
+  <title>Cardápio - Lanchonete</title>
 
-  <!-- Bootstrap 5 CSS -->
+  <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- AOS Animate on Scroll CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
-  <!-- Swiper CSS (para o carrossel/slider) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <!-- Ícones Font Awesome -->
   <script src="https://kit.fontawesome.com/a2a01a6f4c.js" crossorigin="anonymous"></script>
 
   <style>
+    :root {
+      --cor-primaria: #f9c74f;
+      --cor-secundaria: #111;
+      --cor-fundo: #000;
+      --cor-texto: #fff;
+    }
+
     body {
+      background: linear-gradient(to right, var(--cor-fundo), #1a1a1a);
+      color: var(--cor-texto);
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #000000, #1a1a1a);
-      color: #ffffff;
     }
 
     .navbar {
-      background-color: #111;
+      background-color: var(--cor-secundaria);
     }
 
     .hero {
-      background-image: url('https://images.unsplash.com/photo-1504384308090-c894fdcc538d');
+      background-image: url('https://oaidalleapiprodscus.blob.core.windows.net/private/org-FyTj5RMhChsQuAAvmS5L4q2p/user-RZk2GV0ay9pMGBpLUpi4VAWv/img-FMgGkH2GGZnJgPmCEUt5UqEn.png?st=2024-06-01T16%3A56%3A55Z&se=2024-06-01T18%3A56%3A55Z&sp=r&sv=2021-08-06&sr=b&sig=pWiG6Z3aRf1NRU9NeyDCWxAXFtmdPUlXfdgEvfZ9nW0%3D');
       background-size: cover;
       background-position: center;
-      height: 100vh;
+      height: 300px;
       display: flex;
       align-items: center;
       justify-content: center;
-      text-align: center;
     }
 
     .hero h1 {
-      font-size: 4rem;
+      font-size: 3rem;
       font-weight: bold;
-      color: #fff;
-      text-shadow: 2px 2px 4px #000;
+      color: var(--cor-texto);
+      text-shadow: 2px 2px 4px var(--cor-fundo);
+    }
+
+    .btn-add {
+      background-color: var(--cor-primaria);
+      color: #000;
+      font-weight: bold;
+    }
+
+    .btn-add:hover {
+      background-color: #fff;
     }
 
     .card {
       background-color: #222;
-      border: none;
     }
 
-    .card-title {
-      color: #f9c74f;
+    .total-box {
+      background-color: #111;
+      padding: 20px;
+      border-radius: 10px;
     }
 
     footer {
-      background: #000;
+      background-color: var(--cor-secundaria);
       color: #ccc;
-      padding: 40px 0;
-    }
-
-    .btn-sound {
-      background-color: #f9c74f;
-      border: none;
-      color: black;
-      transition: 0.3s;
-    }
-
-    .btn-sound:hover {
-      background-color: #fff;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
-
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-dark">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">AristidesBP</a>
+      <a class="navbar-brand fw-bold" href="#">Cardápio Lanchonete</a>
     </div>
   </nav>
 
-  <!-- Hero -->
   <section class="hero">
-    <div data-aos="fade-up">
-      <h1>Seu próximo desenvolvedor full-stack</h1>
-      <button class="btn btn-sound mt-4" onclick="playSound()">Clique e conheça meu trabalho</button>
+    <h1>Escolha seu lanche favorito</h1>
+  </section>
+
+  <main class="container py-5">
+    <div class="row" id="menuItems">
+      <!-- Itens serão inseridos por JavaScript -->
     </div>
-  </section>
 
-  <!-- Sobre Mim -->
-  <section class="container py-5">
-    <div class="row align-items-center">
-      <div class="col-md-6" data-aos="fade-right">
-        <img src="https://via.placeholder.com/500x350" class="img-fluid rounded" alt="Sobre Aristides" />
+    <hr class="my-5">
+
+    <div class="total-box text-white">
+      <h4>Resumo do Pedido</h4>
+      <ul id="pedidoResumo" class="list-group mb-3"></ul>
+      <p><strong>Total:</strong> R$ <span id="totalPedido">0.00</span></p>
+      <div class="mb-3">
+        <label for="pagamento" class="form-label">Forma de Pagamento</label>
+        <select class="form-select" id="pagamento">
+          <option value="Dinheiro">Dinheiro</option>
+          <option value="Cartão de Crédito">Cartão de Crédito</option>
+          <option value="Pix">Pix</option>
+        </select>
       </div>
-      <div class="col-md-6" data-aos="fade-left">
-        <h2>Sobre mim</h2>
-        <p>Sou especialista em desenvolvimento web e mobile. Atuo com marketing digital, tráfego pago e programação orientada a objeto. Meu objetivo é criar soluções que impactem.</p>
-      </div>
+      <form id="formulario">
+        <input type="text" class="form-control mb-2" placeholder="Nome completo" id="nome" required />
+        <input type="text" class="form-control mb-2" placeholder="CPF" id="cpf" required />
+        <input type="text" class="form-control mb-2" placeholder="Telefone de contato" id="telefone" required />
+        <input type="text" class="form-control mb-2" placeholder="Endereço de entrega" id="endereco" required />
+        <a href="#" id="enviarWhatsapp" target="_blank" class="btn btn-success w-100 mt-3">Enviar pedido via WhatsApp</a>
+      </form>
     </div>
-  </section>
+  </main>
 
-  <!-- Slides de Projetos -->
-  <section class="container py-5">
-    <h2 class="text-center mb-4">Projetos em Destaque</h2>
-    <div class="swiper mySwiper" data-aos="zoom-in">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="https://via.placeholder.com/800x400" class="img-fluid" alt="Projeto 1" />
-        </div>
-        <div class="swiper-slide">
-          <img src="https://via.placeholder.com/800x400" class="img-fluid" alt="Projeto 2" />
-        </div>
-        <div class="swiper-slide">
-          <img src="https://via.placeholder.com/800x400" class="img-fluid" alt="Projeto 3" />
-        </div>
-      </div>
-      <div class="swiper-pagination"></div>
-    </div>
-  </section>
-
-  <!-- Cards de Serviços -->
-  <section class="container py-5">
-    <h2 class="text-center mb-4">Serviços</h2>
-    <div class="row">
-      <div class="col-md-4" data-aos="flip-left">
-        <div class="card p-3 text-center">
-          <i class="fas fa-code fa-3x mb-3 text-warning"></i>
-          <h5 class="card-title">Desenvolvimento Web</h5>
-          <p>Criação de sites modernos e responsivos com foco em performance.</p>
-        </div>
-      </div>
-      <div class="col-md-4" data-aos="flip-up">
-        <div class="card p-3 text-center">
-          <i class="fas fa-mobile-alt fa-3x mb-3 text-warning"></i>
-          <h5 class="card-title">Aplicativos Mobile</h5>
-          <p>Desenvolvimento de apps Android com funcionalidades completas.</p>
-        </div>
-      </div>
-      <div class="col-md-4" data-aos="flip-right">
-        <div class="card p-3 text-center">
-          <i class="fas fa-bullhorn fa-3x mb-3 text-warning"></i>
-          <h5 class="card-title">Gestão de Tráfego</h5>
-          <p>Campanhas online que convertem. Tráfego pago para gerar resultados reais.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Vídeo Apresentação -->
-  <section class="container py-5 text-center">
-    <h2 class="mb-4">Assista minha apresentação</h2>
-    <div class="ratio ratio-16x9" data-aos="fade-up">
-      <iframe src="https://www.youtube.com/embed/8BLNsWEDVic" title="YouTube video" allowfullscreen></iframe>
-    </div>
-  </section>
-
-  <!-- Contato -->
-  <section class="container py-5">
-    <h2 class="text-center mb-4">Fale Comigo</h2>
-    <form class="row g-3" data-aos="fade-up">
-      <div class="col-md-6">
-        <input type="text" class="form-control" placeholder="Seu nome" />
-      </div>
-      <div class="col-md-6">
-        <input type="email" class="form-control" placeholder="Seu e-mail" />
-      </div>
-      <div class="col-12">
-        <textarea class="form-control" rows="5" placeholder="Sua mensagem"></textarea>
-      </div>
-      <div class="col-12 text-center">
-        <button type="submit" class="btn btn-warning">Enviar</button>
-      </div>
-    </form>
-  </section>
-
-  <!-- Rodapé -->
-  <footer class="text-center">
-    <p>© 2025 AristidesBP - Todos os direitos reservados</p>
+  <footer>
+    <p>© 2025 Lanchonete do Aristides</p>
     <p><i class="fab fa-whatsapp"></i> (91) 98242-0404</p>
   </footer>
 
-  <!-- Som ao clicar -->
-  <audio id="clickSound" src="https://www.soundjay.com/buttons/sounds/button-3.mp3" preload="auto"></audio>
-
-  <!-- Scripts -->
   <script>
-    // Reproduz som ao clicar no botão
-    function playSound() {
-      document.getElementById('clickSound').play();
+    const menu = [
+      { nome: "X-Burger", preco: 10.00 },
+      { nome: "X-Salada", preco: 12.00 },
+      { nome: "X-Tudo", preco: 15.00 },
+      { nome: "Refrigerante", preco: 5.00 },
+      { nome: "Batata Frita", preco: 7.00 }
+    ];
+
+    const menuContainer = document.getElementById("menuItems");
+    const resumo = document.getElementById("pedidoResumo");
+    const totalEl = document.getElementById("totalPedido");
+    const linkWhatsapp = document.getElementById("enviarWhatsapp");
+
+    let pedido = [];
+
+    menu.forEach((item, index) => {
+      const col = document.createElement("div");
+      col.className = "col-md-4 mb-4";
+      col.innerHTML = `
+        <div class="card p-3">
+          <h5 class="card-title">${item.nome}</h5>
+          <p class="card-text">R$ ${item.preco.toFixed(2)}</p>
+          <button class="btn btn-add" onclick="adicionarItem(${index})">Adicionar</button>
+        </div>`;
+      menuContainer.appendChild(col);
+    });
+
+    function adicionarItem(index) {
+      pedido.push(menu[index]);
+      atualizarResumo();
     }
-  </script>
 
-  <!-- Bootstrap 5 JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    function atualizarResumo() {
+      resumo.innerHTML = "";
+      let total = 0;
+      pedido.forEach(item => {
+        const li = document.createElement("li");
+        li.className = "list-group-item bg-dark text-white";
+        li.textContent = `${item.nome} - R$ ${item.preco.toFixed(2)}`;
+        resumo.appendChild(li);
+        total += item.preco;
+      });
+      totalEl.textContent = total.toFixed(2);
+    }
 
-  <!-- AOS (animações ao rolar a página) -->
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init();</script>
+    linkWhatsapp.addEventListener("click", function () {
+      const nome = document.getElementById("nome").value;
+      const cpf = document.getElementById("cpf").value;
+      const telefone = document.getElementById("telefone").value;
+      const endereco = document.getElementById("endereco").value;
+      const pagamento = document.getElementById("pagamento").value;
 
-  <!-- Swiper JS (slider/carrossel) -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const swiper = new Swiper(".mySwiper", {
-      loop: true,
-      autoplay: {
-        delay: 3000,
-        disableOnInteraction: false,
-      },
-      pagination: {
-        el: ".swiper-pagination",
-      },
+      let mensagem = `*Pedido Realizado na Lanchonete:*
+`;
+      pedido.forEach(item => {
+        mensagem += `- ${item.nome} - R$ ${item.preco.toFixed(2)}\n`;
+      });
+      mensagem += `\n*Total:* R$ ${totalEl.textContent}`;
+      mensagem += `\n*Pagamento:* ${pagamento}`;
+      mensagem += `\n\n*Dados do Cliente:*\nNome: ${nome}\nCPF: ${cpf}\nTelefone: ${telefone}\nEndereço: ${endereco}`;
+
+      const url = `https://wa.me/5591982420404?text=${encodeURIComponent(mensagem)}`;
+      linkWhatsapp.href = url;
     });
   </script>
 </body>
 </html>
+
