--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirecionando...</title>
-
+  
+  <!-- Redireciona automaticamente para o site da Netflix após 3 segundos 
+  <meta http-equiv="refresh" content="3; url=https://www.netflix.com"> -->
+  
   <!-- Redireciona automaticamente para "destino.html" após 3 segundos -->
-  <meta http-equiv="refresh" content="3; url=destino.html">
+  <meta http-equiv="refresh" content="0; url=https://github.com/aristidesbp/projetos/blob/main/index.html">
 
   <style>
     /* Página visualmente em branco */
