--- a/projetos/delivary/delivary.html
+++ b/projetos/delivary/delivary.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Link para o CSS externo -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="delivary.css" />
 </head>
 <body class="bg-[var(--bege-claro)] text-[var(--preto-quadro)] font-sans">
 
@@ -220,7 +220,7 @@ Total do pedido: R$ <span id="total">0,00</span>
   </section>
 
   <!-- Link para o JS externo -->
-  <script src="scripts.js"></script>
+  <script src="delivary.js"></script>
 </body>
 </html>
 
