--- a/delivery.html
+++ b/delivery.html
@@ -240,9 +240,21 @@ As variáveis --bege-claro e --preto-quadro devem estar definidas em algum lugar
 
 <!-- Filtro de categorias -->
 <div class="mb-4">
-  
+<label for="filtroMenu" class="block text-sm font-medium text-gray-700 mb-2"></label>
+<select id="filtroMenu" class="border rounded px-3 py-2 w-full md:w-64"  
+style="position: fixed;top: 10px;left: 50%;transform: translateX(-50%);background-color: #f7d84f;color: #000;font-weight: bold;padding: 10px 20px;border: 2px solid #8b4513;border-radius: 8px;z-index: 1000;">
+
+    <option value="todos">Todos</option>
+    <option value="lanches">Lanches</option>
+    <option value="bebidas">Bebidas</option>
+    <option value="sobremesas">Sobremesas</option>
+    
+<!-- Adicione mais categorias conforme necessário -->
+</select>
+
+
+ 
 <label for="filtroCategoria" class="block text-sm font-medium text-gray-700 mb-2"></label>
-  
 <select id="filtroCategoria" class="border rounded px-3 py-2 w-full md:w-64"  
 style="position: fixed;top: 10px;left: 50%;transform: translateX(-50%);background-color: #f7d84f;color: #000;font-weight: bold;padding: 10px 20px;border: 2px solid #8b4513;border-radius: 8px;z-index: 1000;">
 
@@ -254,7 +266,6 @@ style="position: fixed;top: 10px;left: 50%;transform: translateX(-50%);backgroun
 <!-- Adicione mais categorias conforme necessário -->
 </select>
 </div>
-
 </header>
 
 
