Update and rename assets/index básico com Seo.html to index.html

--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
 <link href="icons/favicon.png" type="image/x-icon" rel="shortcut icon"/><!-- Estilo CSS externo -->
 <link rel="stylesheet" href="markdown.css">
 
+ 
+<!-- a teg abaixo é usada para transferir para outra página-->
+<meta http-equiv="refresh" content="0;url=delivery.html">
 </head> 
 <body>
 
+
+  
 
 
 <div id="header-container"></div>
