--- a/delivery.html
+++ b/delivery.html
@@ -76,8 +76,6 @@ o nome que fica lá na parte de cima, embaixo da URL indicando qual
 <meta property="og:title" content="Tapioca do Ari – Tapioca Gourmet Artesanal em Belém">
 <!-- 
 Teg do Título que aparecerá no compartilhamento (como se fosse um título de post ou notícia).
-aquele título que aparece quando a gente compartilha uma página, 
-no WhatsApp para o nosso colega 😎
 -->
 
 <meta name="description" content="Tapioca do Ari é a melhor barraca de tapioca gourmet artesanal de Belém! Tapiocas recheadas com ingredientes selecionados, sabor irresistível e atendimento especial.">
@@ -95,22 +93,34 @@ Assim como vimos a tag acima, esta se comporta da mesma forma,
 porém aqui iremos determinar as Palavras-chave para SEO ,
 as palavras que geralmente as pessoas pesquisam nos navegadores.
 -->
-
- <!-- -------------------------------------
-Open Graph para redes sociais (Facebook, LinkedIn, etc.):
-Essas tags com o atributo "property=og:*" fazem parte do protocolo Open Graph. Elas são usadas quando alguém compartilha seu site no Facebook, LinkedIn e outras redes sociais, definem o título, descrição e imagem que aparecem no "cartão de compartilhamento". 
--------------------------------------- -->
+ 
 <meta property="og:title" content="Tapioca do Ari – Tapioca Gourmet Artesanal em Belém">
-<!-- -------------------------------------
-Descrição resumida do conteúdo da página para o card de redes sociais 
--------------------------------------- -->
+<!-- 
+Open Graph para redes sociais (Facebook, LinkedIn, etc.):
+Essas tags com o atributo "property=og:*" fazem parte do protocolo Open Graph. 
+Elas são usadas quando alguém compartilha seu site no Facebook, LinkedIn e 
+outras redes sociais, definem o título, descrição e imagem que aparecem no 
+ "cartão de compartilhamento". 
+-->
+ 
 <meta property="og:description" content="Experimente as melhores tapiocas recheadas de Belém! Delícias artesanais preparadas com carinho na barraca Tapioca do Ari.">
-<!-- -------------------------------------
-Caminho da imagem que aparecerá no card (ideal ter tamanho 1200x630px e estar otimizada) 
--------------------------------------- -->
-<!-- Atenção: esse caminho ./img/tapioca-do-ari.jpg precisa existir no seu projeto! -->
-<meta property="og:image" content="./img/tapioca-do-ari.jpg">
-<!-- ---------------------------------- -->
+<!-- 
+Descrição resumida do conteúdo da página para o card de redes sociais 
+-->
+
+<meta property="og:image" content="img/tapioca-do-ari.jpg">
+<!-- 
+é onde iremos declarar o Caminho da imagem que aparecerá no card 
+(ideal ter tamanho 1200x630px e estar otimizada).
+ Atenção, esse caminho "img/tapioca-do-ari.jpg"  declara que : 
+ a imagem com o nome "tapioca-do-ari.jpg" está dentro de uma pasta chamada 
+ "img", então tanto a pasta quanto a imagem precisa existir no seu projeto! 
+ -->
+
+ 
+
+ 
+ <!-- ---------------------------------- -->
 <!-- Twitter Card -->
 <meta name="twitter:title" content="Tapioca do Ari – Sabor artesanal direto da sua barraca favorita em Belém">
 <meta name="twitter:description" content="Tapiocas recheadas gourmet preparadas na hora! Visite a Tapioca do Ari e descubra um novo sabor a cada mordida.">
